--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,33 @@ h1 {
 	@include site-font(14px, $LighterFontWeight);
 	padding: 4px 6px 4px 10px;
 	letter-spacing: 1px;
+
+	&.search {
+		@include buttonBackground(#CCC, #CCC, $white, none);
+		@include site-font(15px, $HeavyFontWeight);
+		letter-spacing: 0px;
+		padding: 4px;
+		@include box-shadow(none);
+
+		.input-append & {
+			@include border-radius(0px);
+			border: 1px solid #CCC;
+		}
+	}
+}
+
+input[type="email"] {
+	@extend input[type="email"];
+	@include border-radius(0px);
+	@include box-shadow(none);
+	border: 1px solid #FFF;
+
+	 &:focus {
+		border-color: rgba(#fff,1);
+		outline: 0;
+		outline: thin dotted \9; /* IE6-9 */
+		@include box-shadow(#{0 1px 1px rgba(0,0,0,.075), 0px 0 8px rgba($red,.6)});
+	}
 }
 
 .icon-my-arrow {
@@ -232,6 +259,14 @@ ul.home-panes {
 		a {
 			display: block;
 
+			&:hover {
+				text-decoration: none;
+
+				span {
+					background-color: $red;
+				}
+			}
+
 			img {
 				display: block;
 			}
@@ -241,10 +276,52 @@ ul.home-panes {
 				background-color: $darkRed;
 				color: $white;
 				font-weight: $LighterFontWeight;
-				padding: 6px;
-				font-size: 24px;
+				padding: 6px 6px 7px 6px;
+				font-size: 22px;
 				background: $darkRed url(layout/arrow.png) no-repeat 97.5% center;
 			}
+		}
+	}
+}
+
+aside {
+	ul {
+		@include no-bullets;
+		margin: 0px;
+		padding: 0px;
+
+		li {
+			@include site-font(24px, $LighterFontWeight);
+			color: #999999;
+			margin-bottom: 10px;
+
+			a {
+				@include site-font(24px, $MediumFontWeight);
+				color: $darkRed;
+
+				&:hover {
+					text-decoration: none;
+					color: lighten($darkRed, 10%);
+				}
+			}
+		}
+	}
+
+	header {
+		h1 {
+			@extend h1;
+			font-size: 24px;
+			color: #999999;
+			letter-spacing: 1px;
+			border-bottom: 1px solid #CCCCCC;
+			margin-top: 40px;
+			margin-bottom: 30px;
+		}
+	}
+
+	form {
+		input[type="email"] {
+			width: 180px;
 		}
 	}
 }
