--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -557,9 +557,45 @@ footer {
 	}
 }
 
+.ui-widget-overlay {
+	position: absolute;
+	width: 100%;
+    height: 100%;
+	top: 0;
+	left: 0;
+}
 .pop-cal-container {
 	position: absolute;
-	width: 100px;
-	height: 100px;
-	background-color: green;
+	
+	.pop-cal-arrow {
+		border-color: transparent transparent #EEEEEE transparent;
+		border-style:solid;
+		border-width:20px;
+		width:0;
+		height:0;
+		position: absolute;
+		top: -36px;
+		left: 104px;
+	}
+
+	.pop-cal-content {
+		display: block;
+		padding: 10px;
+		width: 227px;
+		background-color: #EEEEEE;
+		color: $red;
+		@include single-box-shadow( $black, 0, 0, 20px );
+
+		header {
+			h1 {
+				@include site-font(12px, $HeavyFontWeight);
+				letter-spacing: 1px;
+				color: $black;
+				text-transform: uppercase;
+				border-bottom: 1px solid #CCCCCC;
+				margin: 0px auto 10px auto;
+				line-height: 20px;
+			}
+		}
+	}
 }
