--- a/app/styles/_site_components.scss
+++ b/app/styles/_site_components.scss
@@ -95,7 +95,7 @@ label {
 
 				a {
 					@include inline-block;
-					color: #EEEEEE;
+					color: #AAAAAA;
 
 					&:hover {
 						text-decoration: none;
@@ -105,6 +105,7 @@ label {
 				&.highlight {
 					a {
 						background-color: $red;
+						color: #EEEEEE;
 					}
 				}
 
