--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -282,8 +282,29 @@ aside {
 	}
 
 	form {
+
+		margin-bottom: 4px;
 		input[type="email"] {
 			width: 180px;
+		}
+	}
+
+	a.social-icons {
+		display: inline-block;
+		width: 30px;
+		height: 30px;
+		background-image: url(layout/social-icons-sprite.png);
+		background-repeat: no-repeat;
+		margin-right: 2px;
+
+		&.fb-icon {
+			background-position: 0px 0px;
+		}
+		&.tw-icon {
+			background-position: -30px 0px;
+		}
+		&.yt-icon {
+			background-position: -60px 0px;
 		}
 	}
 
