--- a/app/styles/_site_components.scss
+++ b/app/styles/_site_components.scss
@@ -299,7 +299,7 @@ label {
 
 	.pop-cal-content {
 		display: block;
-		padding: 10px;
+		padding: 10px 10px 1px 10px;
 		width: 227px;
 		background-color: #EEEEEE;
 		color: $red;
@@ -315,6 +315,18 @@ label {
 				margin: 0px auto 10px auto;
 				line-height: 20px;
 			}
+		}
+
+		a {
+			display: block;
+			line-height: 14px;
+			font-size: 12px;
+		}
+
+		span {
+			display: block;
+			margin-bottom: 10px;
+			font-size: 11px;
 		}
 	}
 }
