--- a/app/styles/_chosen.scss
+++ b/app/styles/_chosen.scss
@@ -1,6 +1,6 @@
 /* @group Base */
 .chzn-container {
-  font-size: 13px;
+  @include site-font(13px, $LighterFontWeight);
   position: relative;
   display: inline-block;
   zoom: 1;
@@ -86,8 +86,7 @@
   margin: 1px 0;
   padding: 4px 20px 4px 5px;
   outline: 0;
-  font-family: sans-serif;
-  font-size: 1em;
+  @include site-font(13px, $LighterFontWeight);
 }
 .chzn-container-single .chzn-drop {
   -moz-background-clip   : padding;
@@ -124,8 +123,7 @@
 .chzn-container-multi .chzn-choices .search-field input {
   color: #666;
   background: transparent !important;
-  font-family: sans-serif;
-  font-size: 100%;
+  @include site-font(13px, $LighterFontWeight);
   height: 15px;
   padding: 5px;
   margin: 1px 0;
