--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,9 +23,14 @@ header#site-header {
 	background-color: yellow;
 	position: relative;
 	z-index: 999999;
+
+	@media screen and (max-width: 1000px) {
+		width: 1000px;
+	}
 	
 	div.black-strip {
 		background-color: #111111;
+		width: 100%;
 
 		h1 {
 			margin-top: 0px;
